# ntttcp-for-linux

./: .gitignore  README.md  azure-pipelines.yml
.github/workflows/: ci.yml  pr-checker.yml
src/: .ntttcp-for-linux-log.xml.swp  CMakeCache.txt  CMakeLists.txt  Makefile  const.h  endpointsync.c  endpointsync.h  epoll.c  epoll.h  file.txt  logger.c  logger.h  main.c  main.h  multithreading.c  multithreading.h  ntttcp-for-linux-log.json  ntttcp-for-linux-log.xml  ntttcp.c  ntttcp.h  oscounter.c  oscounter.h  parameter.c  parameter.h  tcpstream.c  tcpstream.h  test.c  throughputmanagement.c  throughputmanagement.h  udpstream.c  udpstream.h  util.bkp.c  util.c  util.h
test/: ParseNtttcpResult.py  functional_test.py  logger.py  ntttcp_output.py  ntttcp_test.py
